configured bearer input for swagger
