# models/Product.go
@@ -2,8 +2,11 @@ package models
 
 import "gorm.io/gorm"
 
+// Product model info
+// @Description product information
+// @Description with name, description, price, image_url and user_id
 type Product struct {
-	gorm.Model
+	gorm.Model  `swaggerignore:"true"`
 	Name        string  `json:"name"`
 	Description string  `json:"description"`
 	Price       float64 `json:"price"`
